# OxidMAF

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: functions.rs  main.rs  parsers.rs
src/functions/: annotate_ancestral_allele.rs  extract.rs  remove_ref_indels.rs
src/parsers/: maf.rs  taffy.rs  vcf42.rs
test_data/: test.maf
