[package]
name = "OxidMAF"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fffx = "0.1.2"
# ffforf = {path = "../ffforf"}
mimalloc = { version = "0.1.37", default-features = false }
bevy_app = "0.10.1"
bevy_ecs = "0.10.1"
bevy_tasks = "0.10.1"
clap = "4.2.7"
crossbeam = "0.8.2"