[package]
name = "oxid_maf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fffx = "0.1.3"
clap = { version =  "4.5", features = ["derive"] }
# noodles-vcf = "0.75.0" Does not support 4.2, which is what BEAGLE outputs
flate2 = { version = "1.1.1", features = ["zlib-ng"] }
